add custome css

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Restaurants</h1>
+<div class="jumbotron">
+  <h2>Yelpdemo, because trolling should be easy.</h2>
+  <h3>Ruin the businesses in your area with petty small minded nonsense.<br>
+  Leave ratings and reviews if you must.</h3>
+  </div>
 
 <table class="table table-hover table-condensed">
   <thead>
@@ -31,3 +35,5 @@
 <br>
 
 <%= link_to 'New Restaurant', new_restaurant_path, class: "btn btn-link" %>
+
+<%= image_tag "https://s3.amazonaws.com/barryelp/yelp_footer_buildings2.png" %>
