add sign in links

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,6 @@
 
 
 <h1>Love to hear from you!</h1>
-<h2>This is a sample applications from <a href = "http://www.baserails.com">Baserails</a></h2>
+<h2>This is a sample applications from <%= link_to "Baserails", "http://www.baserails.com" %></h2>
 <p>contact us at <a href = "mailto:barryregan101@gmail.com">barryregan@gmail.com</a></p>
 
