--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -2,35 +2,35 @@
   <div class="col-md-3">
     <%= image_tag @restaurant.image_url %>
 
-<h2>
-  <%= @restaurant.name %>
-</h2>
+    <h2>
+      <%= @restaurant.name %>
+    </h2>
 
-<p>
-  <strong>Address:</strong>
-  <%= @restaurant.address %>
-</p>
+    <p>
+     <strong>Address:</strong>
+     <%= @restaurant.address %>
+    </p>
 
-<p>
-  <strong>Phone:</strong>
-  <%= @restaurant.phone %>
-</p>
+    <p>
+      <strong>Phone:</strong>
+      <%= @restaurant.phone %>
+    </p>
 
-<p>
-  <strong>Website:</strong>
-  <%= link_to @restaurant.website, @restaurant.website %>
-</p>
+    <p>
+     <strong>Website:</strong>
+     <%= link_to @restaurant.website, @restaurant.website %>
+    </p>
 
-<%= link_to "Write a Review", new_restaurant_review_path(@restaurant), class: "btn btn-primary" %>
-    </div>
+    <%= link_to "Write a Review", new_restaurant_review_path(@restaurant), class: "btn btn-primary" %>
+  </div>
     
-    <div class="col-md-9">
-      <% if @reviews.blank? %>
-        <h3>No Reviews Yet. Be the first to review.</h3>
-      <% else %>
-        <% @reviews.each do |review| %>
-          <p><%= review.rating %></p>
-          <p><%= review.comment %></p>
+  <div class="col-md-9">
+    <% if @reviews.blank? %>
+      <h3>No Reviews Yet. Be the first to review.</h3>
+    <% else %>
+      <% @reviews.each do |review| %>
+        <div class="star-rating" data-score= <%= review.rating %> ></div>
+        <p><%= review.comment %></p>
       <% end %>
     <% end %>
   </div>
@@ -38,3 +38,14 @@
 
 <%= link_to 'Edit', edit_restaurant_path(@restaurant), class: "btn btn-link" %> |
 <%= link_to 'Back', restaurants_path, class: "btn btn-link" %>
+
+
+<script>
+  $('.star-rating').raty({
+    path: 'https://s3.amazonaws.com/barryelp/stars',
+    readOnly: true,
+    score: function() {
+      return $(this).attr('data-score');
+    }
+  });
+</script>
